# gwforge

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  genindex.html  index.html  inject.html  install.html  noise.html  objects.inv  population.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sphinx-reading-durations.json  usage.html  workflow.html
.github/workflows/: check_code.yml  documentation.yml
GWForge/: conversion.py  interped2D.py  interped2D_discrete.py  utils.py
GWForge/ifo/: detectors.py
GWForge/ifo/ifos/: CE20.ifo  CE40.ifo  ET.ifo  ET_Meuse_Rhine_L.ifo  ET_Sardinia_L.ifo  NEMO.ifo
GWForge/ifo/network_configuration_files/: xg.ini
GWForge/ifo/noise_curves/: Asharp-asd.txt  Asharp-asd_2026.txt  CE20km_1p0MW_Aplus_coat_strain.txt  CE20km_1p0MW_aLIGO_coat_strain.txt  CE20km_1p5MW_Aplus_coat_strain.txt  CE20km_1p5MW_aLIGO_coat_strain.txt  CE40km_1p0MW_Aplus_coat_strain.txt  CE40km_1p0MW_aLIGO_coat_strain.txt  CE40km_1p5MW_Aplus_coat_strain.txt  CE40km_1p5MW_aLIGO_coat_strain.txt  README.md
GWForge/inject/: bilby_inject.py  inject.py  pycbc_inject.py
GWForge/population/: extrinsic.py  mass.py  pairing.py  pdb_external.py  pdb_mass_sampler.py  redshift.py  spin.py
GWForge/population/population_configuration_files/: aligned_spin_bbh.ini  aligned_spin_bns_tides_on.ini  aligned_spin_nsbh.ini  precessing_bbh_powerlawpeak.ini
_modules/: index.html
_modules/gwforge/GWForge/: conversion.html  interped2D.html  interped2D_discrete.html  utils.html
_modules/gwforge/GWForge/ifo/: detectors.html
_modules/gwforge/GWForge/inject/: bilby_inject.html  inject.html  pycbc_inject.html
_modules/gwforge/GWForge/population/: extrinsic.html  mass.html  pairing.html  pdb_external.html  pdb_mass_sampler.html  redshift.html  spin.html
_sources/: index.md.txt  inject.md.txt  install.md.txt  population.md.txt  workflow.md.txt
_sources/autoapi/gwforge/GWForge/: index.rst.txt
_sources/autoapi/gwforge/GWForge/conversion/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/gwforge/GWForge/: index.html
autoapi/gwforge/GWForge/conversion/: index.html
autoapi/gwforge/GWForge/ifo/: index.html
autoapi/gwforge/GWForge/inject/: index.html
autoapi/gwforge/GWForge/interped2D/: index.html
autoapi/gwforge/GWForge/interped2D_discrete/: index.html
autoapi/gwforge/GWForge/population/: index.html
autoapi/gwforge/GWForge/utils/: index.html
docs/source/: conf.py  inject.md  install.md  noise.md  population.md  usage.md  workflow.md
tests/: test.ini  test_population.py
(+28 files in other folders)
