[metadata]
name = gwforge
description = Tool for generating gravitational wave mock dataset
author = Koustav Chandra
author_email = kbc5795@psu.edu
license = MIT
version = 0.0.dev1
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Intended Audience :: Science/Research

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.11

[options.package_data]
GWForge.population = population_configuration_files/*.ini
GWForge.inject = eos_tables/*.dat
GWForge.ifo = noise_curves/*.txt, network_configuration_files/*.ini, ifos/*.ifo